test/files/pos/t1642/JavaCallingScalaHashMap.java
import scala.collection.immutable.HashMap;
import scala.collection.immutable.Map;

public class JavaCallingScalaHashMap {
    public static void main( String[] args ) {
        Map<String, Integer> hashMap = new HashMap.HashTrieMap<String, Integer>(0, new HashMap[0], 0);
    }
}
